# Group-Project

./: .gitignore  README.md
Advanced-Game-Technologies-David/: .gitignore  CSC8503.sln  New Text Document.txt
Advanced-Game-Technologies-David/Assets/Shaders/: GameTechVert.vert
Advanced-Game-Technologies-David/CSC8503/CSC8503Common/: CSC8503Common.vcxproj  Debug.cpp  Debug.h  PhysicsSystem.cpp
Advanced-Game-Technologies-David/CSC8503/GameTech/: GameTech.vcxproj  GameTech.vcxproj.filters  GameTechRenderer.h  Main.cpp  TutorialGame.cpp  TutorialGame.h  VkTechRenderer.cpp  VkTechRenderer.h  gfxrecon_capture_20220220T114226.gfxr  gfxrecon_capture_20220220T114446.gfxr  gfxrecon_capture_20220220T114537.gfxr  gfxrecon_capture_20220220T114713.gfxr  gfxrecon_capture_20220220T115136.gfxr  gfxrecon_capture_20220220T115203.gfxr  gfxrecon_capture_20220220T120334.gfxr  gfxrecon_capture_20220220T121911.gfxr  gfxrecon_capture_20220220T121920.gfxr  gfxrecon_capture_20220220T123154.gfxr  gfxrecon_capture_20220220T123352.gfxr  gfxrecon_capture_20220220T124115.gfxr  gfxrecon_capture_20220220T124540.gfxr  gfxrecon_capture_20220220T125929.gfxr  gfxrecon_capture_20220220T152345.gfxr  (+13 more)
Advanced-Game-Technologies-David/Common/: Common.vcxproj  Common.vcxproj.filters  GameTimer.h  Window.cpp  Window.h
Advanced-Game-Technologies-David/FontBuilder/: FontBuilder.vcxproj
Advanced-Game-Technologies-David/VulkanRendering/: VulkanRendering.vcxproj  VulkanRendering.vcxproj.filters
CSC8503 Networking/: CSC8503 Networking.sln
Group Demo/: .gitconfig  .gitignore  Assembly-CSharp.csproj  FMODUnity.csproj  FMODUnityEditor.csproj  FMODUnityResonance.csproj  FMODUnityResonanceEditor.csproj  Group Demo.sln  gfxrecon_capture_20220214T222419.gfxr
Group Demo/Assets/: CullObstacle.cs  GUIManager.cs  NetworkManager.cs  PlayerController.cs  ResumeButton.cs  SpatialManager.cs  SplashParticle.cs  StickySplash.cs  Timer.cs  WinningState.cs  corridor_walls.fbx  map.txt  map0.txt  map1.txt  map2.txt  map3.txt  moduleMap.txt
Group Demo/ProjectSettings/: DynamicsManager.asset  EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
Group-Project/: .gitignore  CMakeLists.txt  Group-Project.sln  README.md
Group-Project/Assets/Shaders/: GameTechFrag.glsl  GameTechShader.set  GameTechShadowFrag.glsl  PaintEffectFrag.glsl  PaintEffectVert.glsl  SimpleFrag.frag  SimpleVert.vert
Group-Project/Assets/Shaders/VK/: SimpleFrag.spv  SimpleVert.spv
Group-Project/Group-Project/: Group-Project.vcxproj
Group-Project/Group-Project/Debug/: Group-Project.exe.recipe  Group-Project.ilk  vc142.idb
Group-Project/Group-Project/Debug/Group-Project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Group-Project.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Group-Project/cmake/: CMakeCompiler.cmake  CMakeMacros.cmake  CMakePlatforms.cmake  CMakePlugin.cmake  CMakeSettings.cmake  Toolchain-PS4.cmake
Group-Project/src/: CMakeLists.txt
Group-Project/src/Audio/: Audio.cpp  Audio.h  AudioManager.cpp  AudioManager.h  CMakeLists.txt  common_platform.cpp
Group-Project/src/Bullet/include/bullet/BulletDynamics/Dynamics/: btRigidBody.h
Group-Project/src/CSC8503/: CMakeLists.txt  GameTechRenderer.cpp  GameTechRenderer.h  GameWorld.cpp  GameWorld.h  PushdownMachine.cpp
Group-Project/src/DebugMode/: DebugMode.cpp  DebugMode.h
Group-Project/src/GUI/: BallGameMode.cpp  BallGameMode.h  BallLevelMenu.cpp  BallLevelMenu.h  CMakeLists.txt  GameMode.h  GameUI.cpp  MainMenu.cpp  MainMenu.h  PauseMenu.cpp  PauseMenu.h  PauseState.cpp  PauseState.h  PushdownMachine.h  PushdownState.h  SettingMenu.h  StateTransition.h  gui.cpp
Group-Project/src/Networking/: CMakeLists.txt  GameClient.h  GameServer.cpp  NetworkBase.cpp  NetworkBase.h  NetworkObject.cpp  NetworkObject.h  NetworkState.h
Group-Project/src/Networking-ENet/: CMakeLists.txt
Group-Project/src/Networking-ENet/enet/: enet.h  win32.h
Group-Project/src/OpenGLRendering/: CMakeLists.txt  OGLMesh.cpp  OGLRenderer.cpp  OGLRenderer.h  OGLTexture.cpp  OGLTexture.h
Group-Project/src/OpenGLRendering/KHR/: CMakeLists.txt
Group-Project/src/OpenGLRendering/glad/: glad.h
Group-Project/src/Physics/: CMakeLists.txt  GameObject.h  PhysicsTestScene.cpp  PhysicsTestScene.h  VkTechRenderer.cpp  VkTechRenderer.h  btNClmotionState.h
Group-Project/src/PlayStation4/: CMakeLists.txt  PS4AudioSource.cpp  PS4AudioSource.h  PS4ComputeShader.cpp  PS4ComputeShader.h  PS4Frame.cpp  PS4Frame.h  PS4Input.cpp  PS4Input.h  PS4MemoryAware.cpp  PS4Mesh.cpp  PS4Mesh.h  PS4RendererBase.cpp  PS4RendererBase.h  PS4Shader.cpp  PS4Shader.h  PS4Sound.cpp  PS4Sound.h  PS4Texture.cpp  PS4Texture.h  PS4Window.cpp  PS4Window.h  Ps4AudioEmitter.cpp  Ps4AudioEmitter.h  Ps4AudioSystem.cpp  Ps4AudioSystem.h
Group-Project/src/Socket Programming/: Socket Programming.cpp  Socket Programming.sln  Socket Programming.vcxproj  Socket Programming.vcxproj.filters
Group-Project/src/Socket Programming/Debug/: vc142.idb
Group-Project/src/Socket Programming/Debug/Socket P.F546D4F3.tlog/: Socket Programming.lastbuildstate
Group-Project/src/VulkanRendering/: CMakeLists.txt  VulkanMesh.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanShader.cpp  VulkanShader.h  VulkanTexture.cpp  VulkanTexture.h
Group-Project/src/common/: Assets.cpp  Assets.h  CMakeLists.txt  Camera.cpp  Camera.h  Keyboard.h  MeshGeometry.cpp  RenderObject.h  RendererBase.cpp  RendererBase.h  TextureBase.h  TextureLoader.cpp  Win32Window.cpp  Win32Window.h
Group-Project/src/game/: AssetsManager.cpp  AssetsManager.h  Bullet.cpp  Bullet.h  BulletPool.cpp  BulletPool.h  CMakeLists.txt  Controls.h  ControlsCommand.h  DebugMode.cpp  DebugMode.h  Game.cpp  Game.h  GameEntity.cpp  GameEntity.h  Input.h  Items.cpp  Items.h  LevelGen.cpp  LevelGen.h  Painter.cpp  Painter.h  Player.cpp  Player.h  PlayerInput.h  TransformConverter.h  Wall.h  main.cpp  wall.cpp
Group-Project/src/imgui/: CMakeLists.txt  imgui_impl_glfw.cpp
Networking-ENet/Debug/: Networking-ENet.idb
TestUnity/: Test.cpp  Test.h  TestUnity.vcxproj
(+296 files in other folders)
